[gd_scene load_steps=2 format=3 uid="uid://c7iyp161hnyaj"]

[ext_resource type="Script" uid="uid://du0eln7aakjwi" path="res://Assets/Scenes/UI/LevelOverlay/level_overlay.gd" id="1_vn41e"]

[node name="LevelOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vn41e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StartStopButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="StepBackwardButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="StepForwardButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="BackToLevelSelectButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PrevLevelButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 939.0
offset_top = 7.0
offset_right = 1114.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 32
text = "Score: "
